fix: :lipstick: fix empty table UI rendering for leaderboard page and spacing

--- a/src/css/components/table.scss
+++ b/src/css/components/table.scss
@@ -114,6 +114,22 @@ $row-padding-x: 30px;
 
     .q-table__bottom.q-table__bottom--nodata {
         border-top: none;
+        box-shadow: 0px 0px 20px rgb(20 20 46 / 15%);
+        background: rgba(255, 255, 255, 0.05);
+        width: 100%;
+        height: 76px;
+        border-radius: 100px;
+        justify-content: center;
+    }
+
+    &.table-empty {
+        tbody::before {
+            display: none;
+        }
+
+        .q-table thead tr th {
+            padding-bottom: 0;
+        }
     }
 
     .transactions-table-head-row {
